# advisor-cli

./: .advisor.json  Cargo.toml
src/: main.rs
