[package]
name = "advisor-cli"
version = "0.1.0"
authors = ["Felipe Sere <felipesere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = "0.3.0-alpha.7"
surf = "1.0.2"
futures-timer = "0.4"
config = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.0"
