[package]
name = "advisor-cli"
version = "0.1.0"
authors = ["Felipe Sere <felipesere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
config = "0.9.3"
futures-timer = "0.4"
runtime = "0.3.0-alpha.7"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
snafu = { version = "0.5.0", features = ["unstable-futures"] }
surf = "1.0.2"
prettytable-rs = "0.10.0"
spinners = "1.0.0"
